[package]
name = "iced-minesweep-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.8", features = ["canvas", "tokio", "debug"] }
iced_native ={ version = "0.9.1"}
tokio = { version = "1.26", features = ["sync"] }
log = { version = "0.4" }
env_logger = { version = "0.10" }
minefield-rs = {git = "https://github.com/BogdanOlar/minefield-rs", tag = "0.1.3"}